<resources>
    <string name="app_name">Sofra</string>
    <string name="sellingFood">بيع طعام</string>
    <string name="BuyFood">شراءطعام</string>
    <string name="itemsFood">قائمة الطعام</string>
    <string name="commentFood">التعليقات و التقيم</string>
    <string name="informationFood">معلمومات عن المطعم</string>
    <string name="currentOrder">طلبات الحالية</string>
    <string name="completeOrder">طلبات سابقة </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="city">المدينة</string>
    <string name="category">التصنيفات</string>
    <string name="street">الحي</string>
    <string name="loading">برجاء الانتظار</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pleaseLogin"> تفضل بتسجيل الدخول </string>
    <string name="email">البريد الاكتروني</string>
    <string name="password">كلمة السر</string>
    <string name="enter">دخول</string>
    <string name="register"> انشاء حساب جديد</string>
    <string name="forgetPassword"> <u> نسيت كلمة السر ؟</u></string>
    <string name="name">الاسم</string>
    <string name="phone">الجوال</string>
    <string name="confermationPassword"> تأكيد كلمة السر</string>
    <string name="title_activity_app_home">AppHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="address"> وصف المكان</string>
    <string name="confirmData"> تأكيد البيانات</string>
    <string name="title_activity_restaurant_home">RestaurantHomeActivity</string>
    <string name="restaurantName">اسم المطعم</string>
    <string name="countuios">متابعة</string>
    <string name="minimum">الحد الادني للطلب</string>
    <string name="deliveryFee">رسوم التوصيل</string>
    <string name="connection">بيانات التواصل</string>
    <string name="whats">الواتس آب</string>
    <string name="imageShop">صور المتجر</string>
    <string name="enterEmailPlease">برجاء ادخال البريد الإلكتروني</string>
    <string name="send">إرسال</string>
    <string name="pleaseEnterCode">برجاء ادخال الكود المرسل إليك</string>
    <string name="NewPass">إدخال كلمة المرور الجديدة</string>
    <string name="newPassword1">كلمة المرور الجديدة</string>
    <string name="configNewPassword">إعادة كلمة المرور الجديدة</string>
    <string name="change">تغير</string>
    <string name="open">مفتوح</string>
    <string name="state">الحالة</string>
    <string name="happy">يسعدنا مشاركتك بتعليق او تقيم</string>
    <string name="addComment">اضف تقيم او تعليق</string>
    <string name="addCommenthere">اضف تعليق هنا</string>
    <string name="add">اضف</string>
    <string name="price">السعر</string>
    <string name="total">الاجمالي</string>
    <string name="orderNumber">رقم الطلب</string>
    <string name="delivery">التوصيل</string>
    <string name="welcome">مرحبا بك ...</string>
    <string name="home">الصفحة الرئيسية</string>
    <string name="order">طلباتي</string>
    <string name="notification">التنبيهات</string>
    <string name="offer">عروض</string>
    <string name="about">عن التطبيق</string>
    <string name="conditions">الشروط والاحكام</string>
    <string name="shareApp">شارك التطبيق</string>
    <string name="connectWithUs">تواصل معنا</string>
    <string name="logout">تسجيل خروج</string>
    <string name="save">حفظ</string>
    <string name="edit">تعديل</string>
    <string name="myOffer">عروضي</string>
    <string name="budget">العمولة</string>
    <string name="orderComes">الطلبات المقدمة</string>
    <string name="myProducts">منتجاتي</string>
    <string name="addNewProduct">اضف منتج جديد</string>
    <string name="productName">اسم المنتج</string>
    <string name="preparingTime">وقت التحضير</string>
    <string name="productDec">وصف المنتج</string>
    <string name="spisonialOrder">طلب خاص</string>
    <string name="addToCart">اضف الي السلة</string>
</resources>
