<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_rest_home"
            android:icon="@drawable/ic_home_logo"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_rest_product"
            android:icon="@drawable/ic_order_logo"
            android:title="@string/myProducts" />
        <item
            android:id="@+id/nav_rest_notification"
            android:icon="@drawable/ic_notifcation_logo"
            android:title="@string/orderComes" />
        <item
            android:id="@+id/nav_rest_budget"
            android:icon="@drawable/ic_budget_logo"
            android:title="@string/budget" />
        <item
            android:id="@+id/nav_rest_offer"
            android:icon="@drawable/ic_offer_logo"
            android:title="@string/myOffer" />
        <item
            android:id="@+id/nav_rest_about"
            android:icon="@drawable/ic_about_logo"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_rest_conditions"
            android:icon="@drawable/ic_lience_logo"
            android:title="@string/conditions" />

        <item
            android:id="@+id/nav_rest_share"
            android:icon="@drawable/ic_share_logo"
            android:title="@string/shareApp" />

        <item
            android:id="@+id/nav_rest_connect"
            android:icon="@drawable/ic_contuctus_logo"
            android:title="@string/connectWithUs" />

        <item
            android:id="@+id/nav_rest_logout"
            android:icon="@drawable/ic_logout_logo"
            android:title="@string/logout" />
    </group>


</menu>
