<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_logo"
            android:title="@string/home"
            />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_order_logo"
            android:title="@string/order" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notifcation_logo"
            android:title="@string/notification" />
        <item
            android:id="@+id/nav_offer"
            android:icon="@drawable/ic_offer_logo"
            android:title="@string/offer" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about_logo"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_conditions"
            android:icon="@drawable/ic_lience_logo"
            android:title="@string/conditions" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share_logo"
            android:title="@string/shareApp" />

        <item
            android:id="@+id/nav_connect"
            android:icon="@drawable/ic_contuctus_logo"
            android:title="@string/connectWithUs" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_logo"
            android:title="@string/logout" />
    </group>


</menu>
