<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.user.ForgetPasswordFragment">

    <TextView
        android:id="@+id/forgetPassTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/dimension14"
        android:drawableEnd="@drawable/ic_person_logo"
        android:gravity="center"
        android:padding="@dimen/dimension3"
        android:text="@string/forgetPassword"
        android:textColor="@color/black"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/forgetPassTVPlease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgetPassTV"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/dimension14"
        android:gravity="center"
        android:padding="@dimen/dimension3"
        android:text="@string/enterEmailPlease"
        android:textColor="@color/black"
        android:textStyle="italic" />


    <EditText
        android:id="@+id/forgetPassEtextEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/forgetPassTVPlease"
        android:layout_marginStart="@dimen/dimension5"
        android:layout_marginTop="@dimen/dimension14"
        android:layout_marginEnd="@dimen/dimension5"
        android:background="@drawable/rounded_corner_white"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/dimension5"
        android:textDirection="rtl" />

    <Button
        android:id="@+id/forgetPassBtnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgetPassEtextEmail"
        android:layout_marginStart="@dimen/dimension10"
        android:layout_marginEnd="@dimen/dimension10"
        android:layout_marginTop="@dimen/dimension14"
        android:background="@drawable/round_corner_green"
        android:text="@string/send"
        android:textColor="@color/white"
        android:textStyle="bold|italic" />

</RelativeLayout>