<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.user.ConfirmationSendPasswordFragment">

    <TextView
        android:id="@+id/forgetPassTVPlease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimension32"
        android:gravity="center"
        android:padding="@dimen/dimension3"
        android:text="@string/pleaseEnterCode"
        android:textColor="@color/black"
        android:textStyle="italic" />


    <EditText
        android:id="@+id/forgetPassEtextCode"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/forgetPassTVPlease"
        android:layout_marginStart="@dimen/dimension5"
        android:layout_marginTop="@dimen/dimension14"
        android:layout_marginEnd="@dimen/dimension5"
        android:background="@drawable/rounded_corner_white"
        android:gravity="center"
        android:hint="######"
        android:inputType="number"
        android:padding="@dimen/dimension5"
        android:textDirection="rtl" />

    <TextView
        android:id="@+id/forgetPassTVNewPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgetPassEtextCode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimension32"
        android:gravity="center"
        android:padding="@dimen/dimension3"
        android:text="@string/NewPass"
        android:textColor="@color/black"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/forgetPassEtPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/forgetPassTVNewPass"
        android:layout_marginStart="@dimen/dimension5"
        android:layout_marginTop="@dimen/dimension14"
        android:layout_marginEnd="@dimen/dimension5"
        android:background="@drawable/rounded_corner_white"
        android:hint="@string/newPassword1"
        android:inputType="textPassword"
        android:padding="@dimen/dimension5"
        android:textAlignment="viewEnd"
        android:textDirection="rtl" />

    <EditText
        android:id="@+id/forgetPassEtConfigPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/forgetPassEtPassword"
        android:layout_marginStart="@dimen/dimension5"
        android:layout_marginTop="@dimen/dimension14"
        android:layout_marginEnd="@dimen/dimension5"
        android:background="@drawable/rounded_corner_white"
        android:hint="@string/configNewPassword"
        android:inputType="textPassword"
        android:padding="@dimen/dimension5"
        android:textAlignment="viewEnd"
        android:textDirection="rtl" />

    <Button
        android:id="@+id/forgetPassBtnChange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgetPassEtConfigPassword"
        android:layout_marginStart="@dimen/dimension10"
        android:layout_marginTop="@dimen/dimension14"
        android:layout_marginEnd="@dimen/dimension10"
        android:background="@drawable/round_corner_green"
        android:text="@string/change"
        android:textColor="@color/white"
        android:textStyle="bold|italic" />

</RelativeLayout>