<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dimension5"
    android:layout_marginTop="@dimen/dimension5"
    android:layout_marginEnd="@dimen/dimension5"
    android:layout_marginBottom="@dimen/dimension5"
    android:layoutDirection="rtl"
    android:padding="@dimen/dimension3">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/restaurantCardImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dimension3"
                android:background="@color/grayE"
                app:srcCompat="@drawable/image_loader" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/restaurantCardTvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimension3"
                android:text="@string/restaurantName"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/restaurantCardTvCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimension3"
                android:text="@string/category"
                android:textSize="14sp"
                android:textStyle="bold|italic" />

            <RatingBar
                android:id="@+id/restaurantCardRatingBar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimension3"
                android:numStars="5"
                android:stepSize="1"
                android:theme="@style/RatingBar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/restaurantCardTvSates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimension3"
                android:drawableStart="@drawable/ic_true"
                android:drawablePadding="@dimen/dimension2"
                android:padding="@dimen/dimension2"
                android:text="@string/open"
                android:textColor="@color/colorGreenAccent3"
                android:textSize="14sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/restaurantCardTvMin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimension3"
                android:text="@string/minimum"
                android:textSize="12sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/restaurantCardTvDeliveryFee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimension3"
                android:text="@string/deliveryFee"
                android:textSize="12sp"
                android:textStyle="italic" />

        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>